--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -21,7 +21,21 @@
         android:id="@+id/navigation_videos"
         android:name="upworksolutions.themagictricks.ui.dashboard.VideoListFragment"
         android:label="@string/title_videos"
-        tools:layout="@layout/fragment_video_list" />
+        tools:layout="@layout/fragment_video_list">
+        <action
+            android:id="@+id/action_videos_to_player"
+            app:destination="@id/navigation_video_player" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/navigation_video_player"
+        android:name="upworksolutions.themagictricks.ui.dashboard.VideoPlayerFragment"
+        android:label="Video Player"
+        tools:layout="@layout/fragment_video_player">
+        <argument
+            android:name="video"
+            app:argType="upworksolutions.themagictricks.model.YouTubeVideo" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_notifications"
