home page videos

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,11 @@
         android:id="@+id/navigation_home"
         android:name="upworksolutions.themagictricks.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_home_to_video_player"
+            app:destination="@id/navigation_video_player" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_dashboard"
@@ -34,7 +38,7 @@
         tools:layout="@layout/fragment_video_player">
         <argument
             android:name="video"
-            app:argType="upworksolutions.themagictricks.model.YouTubeVideo" />
+            app:argType="upworksolutions.themagictricks.model.VideoItem" />
     </fragment>
 
     <fragment
