--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Original colors -->
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+    
+    <!-- Playful Modern Magician Theme -->
+    <color name="primary">#6200EA</color>
+    <color name="primary_dark">#4A148C</color>
+    <color name="primary_light">#B388FF</color>
+    <color name="accent">#FF4081</color>
+    
+    <color name="background_dark">#F5F5F5</color>
+    <color name="background_light">#FFFFFF</color>
+    
+    <color name="text_primary">#212121</color>
+    <color name="text_secondary">#757575</color>
+    <color name="text_hint">#9E9E9E</color>
+    
+    <color name="card_background">#FFFFFF</color>
+    <color name="divider">#E0E0E0</color>
+    
+    <color name="glow_light">#FF4081</color>
+    <color name="glow_dark">#6200EA</color>
+    
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
