--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -49,12 +49,20 @@
                         android:textAppearance="@style/TextAppearance.Heading"
                         android:layout_marginTop="8dp" />
 
-                    <Button
-                        android:id="@+id/learn_now_button"
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/learnNowButton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Learn Now"
-                        android:layout_marginTop="8dp" />
+                        android:layout_marginTop="16dp"
+                        android:text="Watch Now"
+                        android:textAllCaps="false"
+                        app:icon="@drawable/ic_play_circle"
+                        app:iconGravity="textStart"
+                        app:iconPadding="8dp"
+                        style="@style/Widget.MagicTricks.WatchNowButton"
+                        app:layout_constraintTop_toBottomOf="@id/featured_trick_thumbnail"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
