--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -11,12 +11,27 @@
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home">
         <action
-            android:id="@+id/action_navigation_home_to_videoPlayerFragment"
+            android:id="@+id/action_homeFragment_to_videoPlayerFragment"
             app:destination="@id/videoPlayerFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_right"
-            app:popExitAnim="@anim/slide_out_left" />
+            app:popExitAnim="@anim/slide_out_left">
+            <argument
+                android:name="video"
+                app:argType="upworksolutions.themagictricks.model.VideoItem" />
+        </action>
+        <action
+            android:id="@+id/action_homeFragment_to_categoryVideosFragment"
+            app:destination="@id/categoryVideosFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_right"
+            app:popExitAnim="@anim/slide_out_left">
+            <argument
+                android:name="category_id"
+                app:argType="integer" />
+        </action>
     </fragment>
 
     <fragment
@@ -25,12 +40,16 @@
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard">
         <action
-            android:id="@+id/action_navigation_dashboard_to_videoPlayerFragment"
+            android:id="@+id/action_dashboard_to_videoPlayerFragment"
             app:destination="@id/videoPlayerFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_right"
-            app:popExitAnim="@anim/slide_out_left" />
+            app:popExitAnim="@anim/slide_out_left">
+            <argument
+                android:name="video"
+                app:argType="upworksolutions.themagictricks.model.VideoItem" />
+        </action>
     </fragment>
 
     <fragment
@@ -40,17 +59,15 @@
         tools:layout="@layout/fragment_video_list">
         <action
             android:id="@+id/action_videos_to_player"
-            app:destination="@id/navigation_video_player" />
-    </fragment>
-
-    <fragment
-        android:id="@+id/navigation_video_player"
-        android:name="upworksolutions.themagictricks.ui.dashboard.VideoPlayerFragment"
-        android:label="Video Player"
-        tools:layout="@layout/fragment_video_player">
-        <argument
-            android:name="video"
-            app:argType="upworksolutions.themagictricks.model.VideoItem" />
+            app:destination="@id/videoPlayerFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_right"
+            app:popExitAnim="@anim/slide_out_left">
+            <argument
+                android:name="video"
+                app:argType="upworksolutions.themagictricks.model.VideoItem" />
+        </action>
     </fragment>
 
     <fragment
@@ -67,5 +84,26 @@
         <argument
             android:name="video"
             app:argType="upworksolutions.themagictricks.model.VideoItem" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/categoryVideosFragment"
+        android:name="upworksolutions.themagictricks.ui.dashboard.CategoryVideosFragment"
+        android:label="Category Videos"
+        tools:layout="@layout/fragment_category_videos">
+        <argument
+            android:name="category_id"
+            app:argType="integer" />
+        <action
+            android:id="@+id/action_categoryVideosFragment_to_videoPlayerFragment"
+            app:destination="@id/videoPlayerFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_right"
+            app:popExitAnim="@anim/slide_out_left">
+            <argument
+                android:name="video"
+                app:argType="upworksolutions.themagictricks.model.VideoItem" />
+        </action>
     </fragment>
 </navigation>
